# Camera-Coverage-Studio

./: .gitignore  MESH_LOADING_FIXES.md  README.md  preprocessing.py  pyproject.toml  requirements.txt  tool.py
3d/: exact_L_pipe.glb  high_res_seat.glb  pipe_structure (2).glb  pipe_structure.glb  pipe_with_round_end.glb  seat_clean_final.glb  seat_only.glb  seat_only.pcd  seat_only_backside_clean2.glb  seat_only_clean.glb  seat_only_colored.pcd  seat_only_top.glb  wheel_only.glb  wheel_only.pcd
docs/: architecture.md
projects/2-camera-setup/: metadata.json  project.json
projects/alloy-wheel/: metadata.json  project.json
projects/bottom-view-seat-final-simulation-5mp/: metadata.json  project.json
projects/bottom-view-seat-final-simulation-8mp/: metadata.json  project.json
projects/brazing-simulation/: metadata.json  project.json
projects/brezing-simulation-3cam/: metadata.json  project.json
projects/earphone-cube/: metadata.json  project.json
projects/marker-station/: metadata.json  project.json
projects/only-wheel/: metadata.json  project.json
projects/seat/: metadata.json  project.json
projects/seat-2-simulation/: metadata.json  project.json
projects/seat-top/: metadata.json  project.json
projects/seat-top-only-1/: metadata.json
projects/seat-top-test1/: metadata.json  project.json
projects/shinchan/: metadata.json  project.json
projects/top-view-seat-final-simulation/: metadata.json  project.json
projects/top-view-seat-final-simulation-5mp/: metadata.json
projects/untitled-project/: metadata.json  project.json
(+73 files in other folders)
